Use isolate scope

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,7 @@
 
     <h1>Angular Multiselect</h1>
 
-    <multiselect model-exp="myThing" options-exp="thing for thing in awesomeThings"></multiselect>
+    <multiselect model="myThing" options="awesomeThings"></multiselect>
 
     <script src="angularjs/angular.js"></script>
     <script src="angular-multiselect.js"></script>
