Add dropdown control
Here we're implementing a simple internal directive to power the
dropdow. This might be overkill, but it could easily be subbed out later
or replaced by a user's custom template.

--- a/src/multiselect.html
+++ b/src/multiselect.html
@@ -1,8 +1,11 @@
-<div>
+<div ams-dropdown>
+  <button ams-dropdown-toggle>Multiselect</button>
+
   <ul>
     <li ng-repeat="item in model">{{item.label}}</li>
   </ul>
-  <ul>
+
+  <ul ams-dropdown-menu>
     <li ng-repeat="choice in options">
       <label><input
         type="checkbox"
