--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,8 @@
     <title>Angular Multiselect</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" type="text/css" href="angular-multiselect.css">
   </head>
   <body ng-app="demo" ng-controller="demoCtrl">
 
