Hide model list when empty

--- a/src/multiselect.html
+++ b/src/multiselect.html
@@ -1,7 +1,7 @@
 <div ams-dropdown>
-  <button ams-dropdown-toggle>Multiselect</button>
+  <div ams-dropdown-toggle>Multiselect</div>
 
-  <ul>
+  <ul ng-show="showSelections()">
     <li ng-repeat="item in model">{{item.label}}</li>
   </ul>
 
