--- a/demo/index.html
+++ b/demo/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="angular-multiselect.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body ng-app="demo" ng-controller="demoCtrl">
 
